--- a/Portfolio/Pages/Simulador/Simulador.razor
+++ b/Portfolio/Pages/Simulador/Simulador.razor
@@ -128,7 +128,7 @@
                     <div class="row">
                         <!-- ROW 2 DE MAPA DE STAR WARS -->
                         <div class="col">
-                            <div class="image-container">
+                            <figure class="image-container">
                                 @*<img style="width:380px;height:420px; border-radius:20px;" src="Images/ImagenMapa.jpg" alt="mapa">*@
                                 <img class="img-fluid rounded-20" src="Images/ImagenMapa.webp" alt="mapa">
                                 @if (TiemposDeEspera.Count() != 0)
@@ -140,7 +140,7 @@
                                         <p>Rise of the Resistance: <br /><strong>@TiempoEsperaPromedioRR.ToString("#.#")</strong> min </p>
                                     </div>
                                 }
-                            </div>
+                            </figure>
                         </div>
                     </div>
                 </div>
