--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -1,40 +1,61 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@* La primera vista de menú *@
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Portfolio</a>
+        <span class="oi oi-monitor" style="color:white;" aria-hidden="true"></span>
+        @if (!@IconMenuActive)
+        {
+            <a class="navbar-brand" href="">Portfolio</a>
+        }
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
+@* El contenido del menú, que se expande y colapsa *@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fuentes" Match="NavLinkMatch.All">
-                <span class="oi oi-list" aria-hidden="true"></span> Fuentes
+                <span class="oi oi-list" aria-hidden="true"></span>
+                @if (!@IconMenuActive)
+                {
+                    <label>Fuentes</label>
+                }
             </NavLink>
         </div>
-@*        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="generador">
-                <span class="oi oi-plus" aria-hidden="true"></span> Numeros Aleatorios
-            </NavLink>
-        </div>     
-*@        <div class="nav-item px-3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="simulador">
-                <span class="oi oi-plus" aria-hidden="true"></span> Simulador
+                <span class="oi oi-plus" aria-hidden="true"></span>
+                @if (!@IconMenuActive)
+                {
+                    <label>Simulador</label>
+                }
             </NavLink>
         </div>
-        @*        <div class="nav-item px-3">
-        <NavLink class="nav-link" href="pruebasEstadisticas">
-        <span class="oi oi-plus" aria-hidden="true"></span> Pruebas Estadisitcas
-        </NavLink>
-        </div>*@
-        @*<RadzenFooter>López Rubio Martin - <RadzenIcon Icon="copyright" />Copiright @DateTime.Now.Year - Comunicaciones 2022</RadzenFooter>*@
-
     </nav>
 </div>
 
+@* La fila inferior con la flecha para cambiar el modo del menú *@
+<div class="bottom-row">
+    <div class="icon-menu-arrow">
+        @if (!@IconMenuActive)
+        {
+            <span class="oi oi-arrow-left" style="color: white;" @onclick="ToggleIconMenu"></span>
+        }
+        else
+        {
+            <span class="oi oi-arrow-right" style="color: white;" @onclick="ToggleIconMenu"></span>
+        }
+    </div>
+</div>
+
 @code {
+    private bool IconMenuActive { get; set; } = false;
+
+    [Parameter]
+    public EventCallback<bool> ShowIconMenu { get; set; }
+
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -42,5 +63,11 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private async Task ToggleIconMenu()
+    {
+        IconMenuActive = !IconMenuActive;
+        await ShowIconMenu.InvokeAsync(IconMenuActive);
     }
 }
