Mobile view fixed

--- a/Portfolio/Pages/About/ProfessionalProfileContainer.razor
+++ b/Portfolio/Pages/About/ProfessionalProfileContainer.razor
@@ -4,7 +4,7 @@
 
 <div class="section">
     <div class="professional-profile">
-        <TitleComponent Title="Professional Profile"></TitleComponent>
+        <TitleComponent Title="Profile"></TitleComponent>
         <div class="professional-content">
             @ProfessionalProfile
         </div>
