--- a/Portfolio/Pages/Fuente/TablaFuentes.razor
+++ b/Portfolio/Pages/Fuente/TablaFuentes.razor
@@ -12,7 +12,7 @@
         <tr>
             <th>Numero de Simbolos</th>
             <th>Cadena Generadora</th>
-            <th>Entropia Maxima</th>
+            @* <th>Entropia Maxima</th> *@
             <th>Entropia de la Fuente</th>
             <th></th>
         </tr>
@@ -23,7 +23,7 @@
             <tr>
                 <td>@Fuente.Letras.Count</td>
                 <td>@Fuente.CadenaFuente</td>
-                <td>@Fuente.EntropiaMaxima().ToString("0.##")</td>
+                @* <td>@Fuente.EntropiaMaxima().ToString("0.##")</td> *@
                 <td>@Fuente.EntropiaDeLaFuente().ToString("0.##")</td>
                 <td>
                     <button class="btn btn-primary"
