--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -33,6 +33,15 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="githubprofile">
+                <span class="oi oi-code" aria-hidden="true"></span>
+                @if (!@IconMenuActive)
+                {
+                    <label>GitHubApi</label>
+                }
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/Tincho-dev/Portfolio" target="_blank">
             <span class="oi oi-code" aria-hidden="true"></span>
                 @if (!@IconMenuActive)
