Downgrade Api to .net 7, Added title andd subtitle for projects views

--- a/Portfolio/Pages/Fuente/Fuentes.razor
+++ b/Portfolio/Pages/Fuente/Fuentes.razor
@@ -1,2 +1,8 @@
 @page "/fuentes"
+<h1>
+    Proyecto de "Comunicaciones" - Entropia
+</h1>
+<h2>
+    Calcular la informacion y entropia de una fuente de informacion
+</h2>
  <TablaFuentes></TablaFuentes>
