--- a/Portfolio/Pages/Simulador/Simulador.razor
+++ b/Portfolio/Pages/Simulador/Simulador.razor
@@ -4,6 +4,13 @@
 @inject ISimuladorColasEsperaService simulador
 @inject IJSRuntime JSRuntime
 
+<h1>
+    Proyecto de "Simulación" - Colas de espera en parque de diversión 
+</h1>
+<h2>
+    Simula la dsitribucion de clientes para alcanzar el objetivo de ingresos esperados
+</h2>
+
 <main class="animate__animated animate__fadeIn">
     <div class="container-fluid text-center" style="transition: height 0.5s ease;">
         <div class="row">
