--- a/Portfolio/Pages/About/AboutMe.razor
+++ b/Portfolio/Pages/About/AboutMe.razor
@@ -12,8 +12,8 @@ else
 {
     <ProfileHeader Name="@professional.Name" Role="@professional.Role"></ProfileHeader>
     <ContactLine ProfessionalId="@ProfessionalId"></ContactLine>
-    <ProfessionalProfileContainer Tools="@professional.Tools" ProfessionalProfile="@professional.ProfessionalProfile"></ProfessionalProfileContainer>
-    <HistoryContainer ProfessionalId="@ProfessionalId"></HistoryContainer>
+    <ProfessionalProfileContainer Language=@professional.Language Tools="@professional.Tools" ProfessionalProfile="@professional.ProfessionalProfile"></ProfessionalProfileContainer>
+    <HistoryContainer Language=@professional.Language ProfessionalId ="@ProfessionalId"></HistoryContainer>
 }
 
 
